module/core/mod_interface/tests/inc/front/use_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`
  --> tests/meta/mod_interface/front/use_unknown_vis/mod.rs
   |
   |   xyz use f1;
   |   ^^^
